--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -4,14 +4,15 @@
     android:layout_height="match_parent">
 
     <!-- 툴바 -->
+
     <include layout="@layout/main_toolbar"/>
 
     <!-- 메인 view -->
-    <TextView
+
+    <FrameLayout
+        android:id="@+id/main_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="메인 레이아웃"
-        android:textColor="@color/colorBlack"/>
+        android:layout_height="match_parent">
+    </FrameLayout>
 
 </LinearLayout>
